<resources>
    <string name="app_name">LAKE Enterprises</string>
    <string name="distance">Notify me when the distance is greater than:</string>
    <string name="time">Notify me when the time is greater than:</string>
    <string name="home">HOME</string>
    <string name="recordings">RECORDINGS</string>
    <string name="settings">SETTINGS</string>
    <string name="menu">MENU</string>
    <string name="newRecord">New Recording</string>
    <string name="title">Don\'t Forget!</string>
    <string name="distanceText">Distance from Walker</string>
    <string name="notify">Notify me when the distance is greater than: </string>
    <string name="default_notification_channel_id">notifyid</string>
    <string name="msg_token_fmt">token is %s</string>
    <string name="stop">stop</string>
    <string name="start">start</string>
    <string name="username">username</string>
    <string name="title_activity_login">Sign In</string>
    <string name="Open">open menu</string>
    <string name="Close">close menu</string>
    <string name="play">Play</string>
    <string name="save">Save</string>
    <string name="record">Record</string>
    <!-- Strings related to login -->
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">Already registered. Login!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="title_activity_sliding_menu">SlidingMenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="record">Record</string>
    <string name="play">Play</string>
    <string name="save">Save</string>
</resources>
