<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RecordingsActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/colorPrimary"
        android:orientation="vertical">

        <Button
            android:id="@+id/menu2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="298dp"
            android:layout_marginRight="298dp"
            android:layout_marginBottom="30dp"
            android:onClick="menu"
            android:text="@string/menu" />

        <Button
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="1200dp"
            android:layout_marginBottom="51dp"
            android:text="@string/save" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/recordings"
            android:textSize="30sp" />

        <ToggleButton
            android:id="@+id/record"
            android:layout_width="89dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="102dp"
            android:layout_marginLeft="102dp"
            android:layout_marginTop="53dp"
            android:layout_marginBottom="63dp"
            android:text="@string/record"
            android:textOff="@string/record"
            android:textOn="@string/stop" />

        <ToggleButton
            android:id="@+id/play"
            android:layout_width="wrap_content"
            android:layout_height="47dp"
            android:layout_marginTop="52dp"
            android:layout_marginEnd="102dp"
            android:layout_marginRight="102dp"
            android:layout_marginBottom="65dp"
            android:text="@string/play"
            android:textOff="@string/play"
            android:textOn="@string/stop" />

        <ImageView
            android:id="@+id/microphoneimg"
            android:layout_width="291dp"
            android:layout_height="364dp"
            android:layout_marginTop="47dp"
            android:layout_marginBottom="256dp"
            app:srcCompat="@drawable/microphone" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>